Debug features and local libs

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,11 @@
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
+lib_deps =
+  # Using a library name
+  #PS2Keyboard@ 2.4 #f95e4a5
+  ClickEncoder
+  HX711
+  TimerOne
+  LiquidCrystal_I2C
+
